--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
-     <link rel="stylesheet" href="Css/style.css">
+     <link rel="stylesheet" href="style.css">
 
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -553,7 +553,7 @@
   </div>
 </footer>
 
-  <script src="JavaScript/script.js"></script>
+  <script src="script.js"></script>
   
 
 
