--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 <div class="title"><span></span></div>
     <div class="topic"><span><a> </span></div>
     <div class="column right">
-    <form action="contact_form.php" method="post">
+    <form action="" >
 
             <div class="fields">
               <div class="field name">
