--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                </a>
              </div>
  
-             <h5 class="card-title">Microsoft -</h5> <p>Salesforce Internship Certificate</p>
+             <h5 class="card-title">Salesforce -</h5> <p>Salesforce Internship Certificate</p>
              
            </div>
          </div>
