--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
            <div class="card-content">
              <div class="image">
              <a target="_blank" href="images/Certificate/Salesforce  NETGYANI.pdf>
-               <img src="images/Salesforce  NETGYANI.jpg" alt="Salesforce" width="250" height="150">
+               <img src="images/Certificate/SalesforceNETGYANI.jpg" alt="Salesforce" width="250" height="150">
                </a>
              </div>
  
