--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
        <div class="swiper-slide card">
            <div class="card-content">
              <div class="image">
-             <a target="_blank" href="images/Certificate/Salesforce  NETGYANI.pdf>
+             <a target="_blank" href="images/Certificate/SalesforceNETGYANI.jpg>
                <img src="images/Certificate/SalesforceNETGYANI.jpg" alt="Salesforce" width="250" height="150">
                </a>
              </div>
