--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <p>Hello! My name is Darshan Nandkishor Kotkar 
         <a href="https://www.google.com/search?q=darshan+kotkar&rlz=1C1ONGR_enIN991IN991&oq=darshan+kotkar&aqs=chrome.0.69i59j35i39j69i60l3.3736j0j4&sourceid=chrome&ie=UTF-8" target="_blank">
           <i class="fab fa-google" ></i></a>
-         , I'm 20 years old & third year student of computer engineering ,
+         , I'm 21 years old & Last year student of computer engineering ,
           studying in SVKM IOT college <a href="https://www.svkm-iot.ac.in/" target="_blank"><i class="fas fa-user-graduate" ></i></a>Dhule , I have a good knowledge about Computer , I can do coding nicely , I'm Achieve best practice performance 
-         skill in Web development as well as in SQL also.</p>
+         skill in Web development as well as in MySQL also.</p>
     </div>
   </div>
   </div>
@@ -573,7 +573,7 @@
        <!-- ------------------------------------------------------------------------------------------------------------------ -->
        
        <!-- ---------------------------------------------------------------------------------------------- -->
-       <div class="swiper-slide card">
+<!--        <div class="swiper-slide card">
            <div class="card-content">
              <div class="image">
              <a target="_blank" href="images/Certificate/Salesforce.jpg>
@@ -584,7 +584,7 @@
              <h5 class="card-title">Salesforce -</h5> <p>Salesforce Internship Certificate</p>
              
            </div>
-         </div>
+         </div> -->
        <!-- ------------------------------------------------------------------------------------------------------------------ -->
  
        <!-- ---------------------------------------------------------------------------------------------- -->
