--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
       <p><i class='fas fa-map-marker-alt' style='font-size:21px'></i><strong>  Address:</strong> Dhule 424001, Maharashtra , India.</p>
       <p><i class='fas fa-phone-square' style='font-size:21px'></i><strong> Phone:</strong> +91 9156570480</p>
       <p><i class='fas fa-location-arrow' style='font-size:21px'></i><strong> Email:</strong><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=darshankotkar123@gmail.com" target="_blank"> darshankotkar123@gmail.com</a> </p>
-      <p><i class="fas fa-desktop" style='font-size:21px'></i><strong> Website:</strong><a href="http://darshankotkar.me/" target="_blank"> www.darshankotkar.me</a></p>
+      <p><i class="fas fa-desktop" style='font-size:21px'></i><strong> Website:</strong><a href="https://darshankotkar.me/" target="_blank"> www.darshankotkar.me</a></p>
       
   <div class="title"><span></span></div>
       <div class="topic"><span><a> </span></div>
