--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      <div class="button">
        <center>
      <a href="#contact"> <button> Hire Me </button></a>
-     <a href="CV.pdf" download>
+     <a href="Darshan's CV 02 Sep 22.pdf" download>
        <button>Download CV</button></a></center>
      </div>
    </div>
