--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      <div class="button">
        <center>
      <a href="#contact"> <button> Hire Me </button></a>
-     <a href="CV_17oct22.pdf" download>
+     <a href="Darshan Kotkar CV 22 Oct 2022.pdf" download>
        <button>Download CV</button></a></center>
      </div>
    </div>
