--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Salesforce  administrator.pdf">
-                  <img src="images/Certificate/Salesforce.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Salesforce.jpg" alt="Salesforce" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Internship Certificate -</h5>
@@ -648,7 +648,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/IICC round 2 .pdf">
-                  <img src="images/Certificate/IICC round 2.png" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/IICC round 2.png" alt="IICC" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">IICC Contest -</h5>
@@ -661,7 +661,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/IDBI Java technology Certificate.pdf">
-                  <img src="images/Certificate/IDBI Java technology.png" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/IDBI Java technology.png" alt="IDBI" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Traning Certificate -</h5>
@@ -674,7 +674,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Google1.jpg">
-                  <img src="images/Certificate/Google1.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Google1.jpg" alt="Google " width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Google -</h5>
@@ -689,7 +689,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Microsoft2.jpg">
-                  <img src="images/Certificate/Microsoft2.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Microsoft2.jpg" alt="Microsoft" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Microsoft -</h5>
@@ -700,26 +700,11 @@
           <!-- ------------------------------------------------------------------------------------------------------------------ -->
 
           <!-- ---------------------------------------------------------------------------------------------- -->
-          <!--        <div class="swiper-slide card">
-                  <div class="card-content">
-                    <div class="image">
-                    <a target="_blank" href="images/Certificate/Salesforce.jpg>
-                      <img src="images/Certificate/Salesforce.jpg" alt="Salesforce" width="250" height="150">
-                      </a>
-                    </div>
-
-                    <h5 class="card-title">Salesforce -</h5> <p>Salesforce Internship Certificate</p>
-                    
-                  </div>
-                </div> -->
-          <!-- ------------------------------------------------------------------------------------------------------------------ -->
-
-          <!-- ---------------------------------------------------------------------------------------------- -->
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/SQL3.jpg">
-                  <img src="images/Certificate/SQL3.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/SQL3.jpg" alt="Sololearn" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Sololearn -</h5>
@@ -733,7 +718,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Microsoft4.jpg">
-                  <img src="images/Certificate/Microsoft4.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Microsoft4.jpg" alt="Artificial" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Microsoft -</h5>
@@ -747,7 +732,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Eyantra5.jpg">
-                  <img src="images/Certificate/Eyantra5.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Eyantra5.jpg" alt="Eyantra" width="250" height="150">
                 </a>
               </div>
               <h5 class="card-title">Eyantra -</h5>
@@ -761,7 +746,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/DELL6.jpg">
-                  <img src="images/Certificate/DELL6.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/DELL6.jpg" alt="Dell" width="250" height="150">
                 </a>
               </div>
 
@@ -777,7 +762,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Coursera7.jpg">
-                  <img src="images/Certificate/Coursera7.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Coursera7.jpg" alt="Coursera" width="250" height="150">
                 </a>
               </div>
 
@@ -793,7 +778,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Coursera8.jpg">
-                  <img src="images/Certificate/Coursera8.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Coursera8.jpg" alt="Coursera" width="250" height="150">
                 </a>
               </div>
 
@@ -809,7 +794,8 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/Microsoft PowerApps9.jpg">
-                  <img src="images/Certificate/Microsoft PowerApps9.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/Microsoft PowerApps9.jpg" alt="Microsoft PowerApps" width="250"
+                    height="150">
                 </a>
               </div>
 
@@ -825,7 +811,7 @@
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/ICETIC10.jpg">
-                  <img src="images/Certificate/ICETIC10.jpg" alt="Travel System" width="250" height="150">
+                  <img src="images/Certificate/ICETIC10.jpg" alt="Blockchain" width="250" height="150">
                 </a>
               </div>
 
