--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
           <!-- ------------------------------------------------------------------------------------------------------------------ -->
 
           <!-- ---------------------------------------------------------------------------------------------- -->
-          <div class="swiper-slide card">
+<!--           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
                 <a target="_blank" href="images/Certificate/IICC round 2 .pdf">
@@ -655,7 +655,7 @@
               <p>Cleared coding round 2 with <br> 941 among 83k+ contestants in all India.</p>
 
             </div>
-          </div>
+          </div> -->
           <!-- ------------------------------------------------------------------------------------------------------------------ -->
           <div class="swiper-slide card">
             <div class="card-content">
