--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="button">
           <center>
             <a href="#contact"> <button> Hire Me </button></a>
-            <a href="Darshan Kotkar CV 16 Dec 2022.pdf" download>
+            <a href="Darshan Kotkar CV.pdf" download>
               <button>Download CV</button></a>
           </center>
         </div>
