--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
                   <h5 class="card-title">Shivsena India</h5>
                   <a class="project-icon" href="https://github.com/da9156/shivsenaindia" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">First live project When i am doing my Internship in White & Brooks IT Software,
-                    Mumbai. </p>
+                  <p class="card-text">During my internship at White & Brooks IT Software in Mumbai, I had the opportunity to work on my first live project. This hands-on experience allowed me to apply my skills and knowledge gained during my studies, contributing to the successful execution and delivery of the project. It was a valuable learning experience that further solidified my passion for software development. </p>
                   <a href="https://da9156.github.io/shivsenaindia/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -243,9 +242,7 @@
                   <h5 class="card-title">SunHills Solar Technology</h5>
                   <a class="project-icon" href="https://github.com/da9156/Sun" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">This is my freelancing project I have created a site to display some information
-                    about the
-                    company.</p>
+                  <p class="card-text">I successfully completed a freelancing project where I designed and developed a website to showcase relevant information about the company. Through effective design and functionality, the website effectively represents the company's identity and provides visitors with valuable information. It was a rewarding experience utilizing my skills to create a professional and engaging online presence for the company.</p>
                   <a href="https://sunhillssolar.com" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -254,8 +251,7 @@
                 <img src="images/Happy_Mart.png" alt="Mart" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Happy Mart E-Store</h5>
-                  <p class="card-text">I have done Front-end work on this a site, and they paid me for it when I
-                    was in happy mart shop.</p>
+                  <p class="card-text">During my time at Happy Mart Shop, I had the opportunity to work on front-end development for a website. I successfully completed the assigned tasks and the client was satisfied with the outcome. I received payment for my work, which further validated my skills and professionalism in delivering quality front-end solutions.</p>
                   <a href="https://happymartdhule.justdial.com" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -273,7 +269,7 @@
                   <h5 class="card-title">Travel System</h5>
                   <a class="project-icon" href="https://github.com/da9156/TravelSystem" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project i have developed a 'Travel System' to arrange customers data.</p>
+                  <p class="card-text">In this project, I successfully developed a Travel System to efficiently manage and organize customer data. The system streamlines the process of arranging travel arrangements, providing a user-friendly interface to input, store, and retrieve customer information. The Travel System enhances operational efficiency and ensures smooth customer experiences.</p>
                   <a href="https://da9156.github.io/TravelSystem/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -284,9 +280,7 @@
                   <h5 class="card-title">ML-Liver Patients Detection</h5>
                   <a class="project-icon" href="https://github.com/da9156/ML-Liver-Patient-dataset" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">Performed model evaluation on liver patients using classification models as SVM,
-                    KNN and
-                    decision tree.</p>
+                  <p class="card-text">I conducted model evaluation on liver patients using various classification models, including Support Vector Machines (SVM), K-Nearest Neighbors (KNN), and Decision Tree. By applying these models, I assessed their performance in accurately predicting liver disease in patients. This evaluation process allowed me to gain insights into the strengths and limitations of each model, aiding in the selection of the most effective classifier for liver disease prediction.</p>
                   <a href="https://github.com/da9156/ML-Liver-Patient-dataset" target="_blank"
                     class="btn btn-primary">Demo</a>
                 </div>
@@ -298,9 +292,7 @@
                   <h5 class="card-title">Admin Panel</h5>
                   <a class="project-icon" href="https://github.com/da9156/LoginPage" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">The system designed of provides the functionality to create , read , update and
-                    delete
-                    entities like Add database.</p>
+                  <p class="card-text">The designed system provides comprehensive functionality for creating, reading, updating, and deleting entities, similar to adding and managing a database. Users can easily perform operations such as adding new records, retrieving existing data, updating information, and deleting entities as needed. This system simplifies data management and ensures efficient handling of entities, enhancing overall database operations.</p>
                   <a href="https://traveldashboard.000webhostapp.com/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -319,9 +311,7 @@
                   <h5 class="card-title">Login page</h5>
                   <a class="project-icon" href="https://github.com/da9156/LoginPage" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project i have developed Login page of verification of otp and send to
-                    the
-                    customer mail id.</p>
+                  <p class="card-text">In this project, I successfully developed a login page that includes an OTP verification process. After the user enters their credentials, the system generates an OTP (One-Time Password) and sends it to the customer's registered email address. The user is then prompted to enter the OTP for verification before gaining access to the system. This added security measure ensures a secure and seamless login process for the customers.</p>
                   <a href="https://da9156.github.io/LoginPage/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -332,8 +322,7 @@
                   <h5 class="card-title">Registration form</h5>
                   <a class="project-icon" href="https://github.com/da9156/RegistrationForm" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project i have developed a Responsive Contact Form using php Programming.
-                  </p>
+                  <p class="card-text">In this project, I have successfully developed a responsive contact form using PHP programming. The contact form allows users to input their information and send messages or inquiries to the desired recipient. The form is designed to adapt and function seamlessly across different devices and screen sizes, ensuring a user-friendly experience for visitors accessing the form from various devices.</p>
                   <a href="https://da9156.github.io/RegistrationForm/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -344,8 +333,7 @@
                   <h5 class="card-title">Portfolio</h5>
                   <a class="project-icon" href="https://github.com/da9156/PortfolioWeb" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project i have developed a portfolio side to expand my information of my
-                    self.</p>
+                  <p class="card-text">In this project, I have created a portfolio website to showcase and expand upon my personal information. The portfolio site serves as a platform to present my skills, experience, projects, and achievements to potential clients or employers. By developing this portfolio website, I have enhanced my online presence and provided a comprehensive overview of my capabilities and accomplishments.</p>
                   <a href="#" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -362,9 +350,7 @@
                   <h5 class="card-title">Price Table</h5>
                   <a class="project-icon" href="https://github.com/da9156/Price-Table" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project we have developed a Price table for customer , This site i was
-                    sell & earn
-                    stipend.</p>
+                  <p class="card-text">In this project, we have developed a price table for customers. The website enables customers to view and compare prices for various products or services offered. Additionally, through this platform, I have implemented a sales and earning system where I can sell products or services and earn a stipend or commission. This project provides an efficient way to showcase offerings and generate revenue through online sales.</p>
                   <a href="https://da9156.github.io/Price-Table/" target="_blank" class="btn btn-primary">Demo</a>
                 </div>
               </div>
@@ -375,9 +361,7 @@
                   <h5 class="card-title">About Web-Development</h5>
                   <a class="project-icon" href="https://github.com/da9156/About-Web-Development" target="_blank"><i
                       class="fab fa-github"></i></a>
-                  <p class="card-text">In this project i have developed a suitable information about web this site help
-                    to
-                    beginners.</p>
+                  <p class="card-text">In this project, I have developed a website dedicated to providing valuable information about web development. This platform aims to assist beginners in understanding the basics of web development, including concepts, technologies, and best practices. The site serves as a valuable resource, offering guidance, tutorials, and tips to help beginners embark on their journey in the web development field.</p>
                   <a href="https://da9156.github.io/About-Web-Development/" target="_blank"
                     class="btn btn-primary">Demo</a>
                 </div>
@@ -387,9 +371,7 @@
                 <img src="images/Dhule Tourism_7.png" alt="Dhule Tourism" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">Dhule Tourism</h5>
-                  <p class="card-text">In this project i have developed a Dhule Tourism site this site show you
-                    information about
-                    Dhule.</p>
+                  <p class="card-text">In this project, I have successfully developed a Dhule Tourism website. This platform serves as a comprehensive source of information about Dhule, showcasing its attractions, landmarks, cultural heritage, and tourist activities. The website provides visitors with a detailed overview of Dhule's rich history, local cuisine, places to visit, and accommodation options, helping promote tourism and providing an engaging resource for tourists planning to explore Dhule.</p>
                   <a href="https://sites.google.com/view/welcometodhule" target="_blank"
                     class="btn btn-primary">Demo</a>
                 </div>
