--- a/index.html
+++ b/index.html
@@ -103,15 +103,12 @@
             <div class="topic" id="tp">Engineering Is My Passion :</div>
             <div class="topic-body">
               <p>Hello! My name is Darshan Nandkishor Kotkar
-                <a href="https://www.google.com/search?q=darshan+kotkar&rlz=1C1ONGR_enIN991IN991&oq=darshan+kotkar&aqs=chrome.0.69i59j35i39j69i60l3.3736j0j4&sourceid=chrome&ie=UTF-8"
-                  target="_blank">
-                  <i class="fab fa-google"></i></a>
-                , I'm 21 years old & Last year student of computer engineering ,
-                studying in SVKM IOT college <a href="https://www.svkm-iot.ac.in/" target="_blank"><i
-                    class="fas fa-user-graduate"></i></a> Dhule , I have a good knowledge about Computer , I can do
-                coding
-                nicely , I'm Achieve best practice performance
-                skill in Web development as well as in MySQL also.
+                <a href="https://bit.ly/46UMwMT" target="_blank"> <i class="fab fa-google"></i></a>
+                , and I'm excited to share my passion for computer engineering and my expertise in coding and web development. As a final-year student at<a href="https://www.svkm-iot.ac.in/" target="_blank"><i class="fas fa-user-graduate"></i></a> Shri Vile Parle Kelavani Mandal's Institute of Technology in Dhule, I have gained valuable knowledge and skills in this field. 
+
+                  With proficiency in coding, particularly in Full Stack Development, and a strong understanding of MySQL, I believe I bring valuable assets to the industry. My dedication to continuously improving my skills and staying updated with the latest technologies demonstrates my commitment to excellence.
+
+                  I am confident that my solid foundation in computer engineering, coupled with my enthusiasm and expertise, will contribute to a successful career in this field. I am excited about the opportunities ahead and look forward to making meaningful contributions.
               </p>
             </div>
           </div>
@@ -127,8 +124,7 @@
         <div class="skills-details">
           <div class="text">
             <div class="topic">Skills Reflects Our Knowledge</div>
-            <p>To the best of my knowledge and belief myself, Looking for a work opportunity that will utilize the
-              knowledge, I possess to create Innovative Technology.</p>
+            <p>I am actively seeking a work opportunity where I can apply my existing knowledge and skills to drive innovation in the field of technology. With a strong belief in my abilities, I am eager to contribute to projects that push boundaries and create impactful solutions.</p>
             <div class="experience">
               <div class="num">04</div>
               <div class="exp">Years Of <br> Experience</div>
